--- a/src/p5_plain-JS/index.jade
+++ b/src/p5_plain-JS/index.jade
@@ -1,7 +1,7 @@
 extends ../_templates/_p5js.jade
 block pageVars
-    - var titleHead = "p5js - dev"
-    - var titlePage = "An example..."
+    - var titleHead = "blindfish spider-monkey demo"
+    - var titlePage = "p5 - plain JS and CSS demo"
     
 block append localVars
     //- the following can be uncommented if you want to override any options
@@ -14,7 +14,7 @@ block append head
 
 block sources
     //- add links to additional source files here:
-    a(href="linkToSource.js") my source file
+    //- a(href="linkToSource.js") my source file
 
 //- load your own additional scripts here.
 //- Note that js/sketch.js is asumed and already loaded from the template
